--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=S, initial-scale=1.0">
     <title>Adventure ToDo List</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <nav>
