--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         </div>
         
     </div>
-    <script src="script.js"></script>
+    
+    <footer> Made by Samuel And Jean</footer>
 </body>
 </html>
