--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav>
+        <img src="img/logo.png" alt="Logo" class="logo">
         <ul>
             <li><a href="ToDo.html">Inicio</a></li>
             <li><a href="Misiones.html">Misiones</a></li>
