--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <li><a href="Perfil.html">Perfil</a></li>
         </ul>
     </nav>
-    
+    <header>
+        <h1>Bienvenido a tu Aventura</h1>
+        <p>¡Completa tus tareas y gana recompensas!</p>
+    </header>
     <div class="container">
        <div class="Perfil">
         <img src="img/Perfil.png" alt="Perfil" class="perfil-img">
