--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <option value="artesania">Artesanía</option>
                 </select>
                 
-                <button type="submit">Guardar Tarea</button>
+                <button id="guardar-btn"type="submit">Guardar Tarea</button>
             </form>
             </div>
         </div>
