Creacion de tareas y eliminacion
Falta la edicion de tareas

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <option value="completada">Completada</option>
                 </select>
                 
-                <button id="guardar-btn"type="submit">Guardar Tarea</button>
+                <button id="guardar-btn"type="submit">Agregar Objetivo</button>
             </form>
             </div>
         </div>
