--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=S, initial-scale=1.0">
     <title>Adventure ToDo List</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/navbar.css">
 </head>
 <body>
     <nav>
@@ -84,7 +85,9 @@
     <div class="Tareas">
         <div class="Tareas-pendientes">
             <h2>Tareas Pendientes</h2>
-            <ul id="pending-tasks"></ul> 
+            <ul id="pending-tasks">
+
+            </ul> 
         </div>
         <div class="'Tareas-encurso'">
             <h2>Tareas en Curso</h2>
