--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="img/logo.png" alt="Logo" class="logo">
         <ul>
             <li><a href="ToDo.html">Inicio</a></li>
-            <li><a href="Misiones.html">Misiones</a></li>
+            <li><a href="misiones/misiones.html">Misiones</a></li>
             <li><a href="Logros.html">Logros</a></li>
             <li><a href="Tienda.html">Tienda</a></li>
             <li><a href="Perfil.html">Perfil</a></li>
