--- a/misiones/misiones.html
+++ b/misiones/misiones.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/misiones.css">
-    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="../styles/misiones.css">
+    <link rel="stylesheet" href="../styles/navbar.css">
 </head>
 <body>
     <nav>
@@ -21,5 +21,6 @@
     <header>
         <h1>Bienvenido al tablon de Misiones</h1>
         <p>¡Completa misiones de dificultad variada que el gremio te envia. Tu puedes !!!</p>
+<script src="../js/misiones.js"></script>
 </body>
 </html>
