--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <img src="img/logo.png" alt="Logo" class="logo">
         <ul>
-            <li><a href="ToDo.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="misiones/misiones.html">Misiones</a></li>
             <li><a href="Logros.html">Logros</a></li>
             <li><a href="Tienda.html">Tienda</a></li>
