--- a/misiones/misiones.html
+++ b/misiones/misiones.html
@@ -11,8 +11,8 @@
     <nav>
         <img src="img/logo.png" alt="Logo" class="logo">
         <ul>
-            <li><a href="ToDo.html">Inicio</a></li>
-            <li><a href="Misiones.html">Misiones</a></li>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../misiones/misiones.html">Misiones</a></li>
             <li><a href="Logros.html">Logros</a></li>
             <li><a href="Tienda.html">Tienda</a></li>
             <li><a href="Perfil.html">Perfil</a></li>
@@ -21,6 +21,39 @@
     <header>
         <h1>Bienvenido al tablon de Misiones</h1>
         <p>¡Completa misiones de dificultad variada que el gremio te envia. Tu puedes !!!</p>
+    </header>
+    <div class="container">
+       
+        <div id="missionForm" class="modal hidden">
+            <div class="modal-content">
+                <span class="close" id="closeForm">&times;</span>
+                <h2>Agregar Nueva Misión</h2>
+                <form method="dialog" id="newMissionForm">
+                    <label for="missionName">Nombre de la Misión:</label>
+                    <input type="text" id="missionName" name="missionName" required>
+
+                    <label for="missionDescription">Descripción:</label>
+                    <textarea id="missionDescription" name="missionDescription" required></textarea>
+
+                    <label for="missionDifficulty">Dificultad:</label>
+                    <select id="missionDifficulty" name="missionDifficulty">
+                        <option value="facil">Fácil</option>
+                        <option value="intermedia">Intermedia</option>
+                        <option value="dificil">Difícil</option>
+                        <option value="epico">Épico</option>
+                        <option value="legendario">Legendario</option>
+                    </select>
+                    <label for="missionDate">Fecha límite:</label>
+                    <input type="date" id="missionDate" name="missionDate" required>
+                    <button type="submit" class="agregarbtn">Agregar Misión</button>
+                </form>
+            </div>
+            <div class="mission-list">
+                <h2>Misiones Actuales</h2>
+                <ul id="missionList">
+
+                </ul>
+        </div>
 <script src="../js/misiones.js"></script>
 </body>
 </html>
