mision con una sola s

--- a/misiones/misiones.html
+++ b/misiones/misiones.html
@@ -28,15 +28,15 @@
             <div class="modal-content">
                 <span class="close" id="closeForm">&times;</span>
                 <h2>Agregar Nueva Misión</h2>
-                <form method="dialog" id="newMissionForm">
+                <form method="dialog" id="newMisionForm">
                     <label for="missionName">Nombre de la Misión:</label>
-                    <input type="text" id="missionName" name="missionName" required>
+                    <input type="text" id="misionName" name="misionName" required>
 
-                    <label for="missionDescription">Descripción:</label>
-                    <textarea id="missionDescription" name="missionDescription" required></textarea>
+                    <label for="misionDescription">Descripción:</label>
+                    <textarea id="misionDescription" name="misionDescription" required></textarea>
 
                     <label for="missionDifficulty">Dificultad:</label>
-                    <select id="missionDifficulty" name="missionDifficulty">
+                    <select id="misionDifficulty" name="misionDifficulty">
                         <option value="facil">Fácil</option>
                         <option value="intermedia">Intermedia</option>
                         <option value="dificil">Difícil</option>
@@ -44,8 +44,8 @@
                         <option value="legendario">Legendario</option>
                     </select>
                     <label for="missionDate">Fecha límite:</label>
-                    <input type="date" id="missionDate" name="missionDate" required>
-                    <button type="submit" class="agregarbtn">Agregar Misión</button>
+                    <input type="date" id="misionDate" name="misionDate" required>
+                    <button type="submit" id="agregarbtn">Agregar Misión</button>
                 </form>
             </div>
             <div class="mission-list">
