boton y formato mision

--- a/misiones/misiones.html
+++ b/misiones/misiones.html
@@ -51,7 +51,33 @@
             <div class="mission-list">
                 <h2>Misiones Actuales</h2>
                 <ul id="missionList">
-
+                    <li class="mission-item">
+                       <div class="Name-li"><p>Name</p></div>
+                       <div class="Descripción-li"><p>Descripción</p></div>
+                       <div class="Fecha-li"><p>Fecha</p></div>
+                       <div class="Dificultad-li"><p>Dificultad</p></div>
+                       <div class="btn">
+                        <button class="delete-btn" title="Eliminar">
+                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0,0,256,256">
+                                <g transform=""><g fill="#1b1f3b" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" 
+                                    stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                     font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+                                     <path d="M0,256v-256h256v256z" id="bgRectangle">
+                                     </path></g><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                                      stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                       font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+                                       <g transform="scale(16,16)"><path d="M8,9.704l-3.943,3.942l-1.703,-1.703l3.942,-3.943l-3.942,-3.943l1.703,
+                                        -1.703l3.943,3.942l3.943,-3.942l1.703,1.703l-3.942,3.943l3.942,3.943l-1.703,1.703z" fill="#f78f8f"></path>
+                                    <path d="M11.943,2.707l1.35,1.35l-3.589,3.589l-0.354,0.354l0.354,0.354l3.589,3.589l-1.35,1.35l-3.589,
+                                    -3.589l-0.354,-0.354l-0.354,0.354l-3.589,3.589l-1.35,-1.35l3.589,-3.589l0.354,-0.354l-0.354,-0.354l-3.589,-3.589l1.35,
+                                    -1.35l3.589,3.589l0.354,0.354l0.354,-0.354l3.589,-3.589M11.943,2l-3.943,3.943l-3.943,-3.943l-2.057,2.057l3.943,3.943l-3.943,
+                                    3.943l2.057,2.057l3.943,-3.943l3.943,3.943l2.057,-2.057l-3.943,-3.943l3.943,-3.943l-2.057,-2.057z" fill="#c74343">
+                                </path></g></g></g>
+                            </svg>
+                        </button>
+                        </div>
+                        
+                    </li>
                 </ul>
         </div>
 <script src="../js/misiones.js"></script>
