actualizacion del codigo
Contador de horas actualizado

--- a/misiones/misiones.html
+++ b/misiones/misiones.html
@@ -44,7 +44,7 @@
                         <option value="legendario">Legendario</option>
                     </select>
                     <label for="missionDate">Fecha límite:</label>
-                    <input type="date" id="misionDate" name="misionDate" required>
+                    <input type="datetime-local" id="misionDate" name="misionDate" required>
                     <button type="submit" id="agregarbtn">Agregar Misión</button>
                 </form>
             </div>
@@ -54,8 +54,8 @@
                     <li class="mission-item">
                        <div class="Name-li"><p>Name</p></div>
                        <div class="Descripción-li"><p>Descripción</p></div>
-                       <div class="Fecha-li"><p>Fecha</p></div>
                        <div class="Dificultad-li"><p>Dificultad</p></div>
+                       <div class="Fecha-li"><p>Fecha</p></div>
                        <div class="btn">
                         <button class="delete-btn" title="Eliminar">
                             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0,0,256,256">
